Fix header visibility and animation on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -874,7 +874,7 @@ section {
         top: 99%;
         left: 0;
         right: 0;
-        background: rgba(255, 255, 255, 0.15);
+        background: var(--main-color);
         backdrop-filter: blur(20px) saturate(180%);
         -webkit-backdrop-filter: blur(20px) saturate(180%);
         border-top: 1px solid rgba(255, 255, 255, 0.3);
